Fix form layout on mobile, and change its background color

--- a/style.css
+++ b/style.css
@@ -116,4 +116,9 @@ a {
         transform: scale(0.75) translate(-20px, 0px);
     }
 
+    #mailchimp-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
